// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Snackbar> renders 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "padding": 16,
                },
                Object {
                  "backgroundColor": "#191919",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": undefined,
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                  },
                  undefined,
                  false,
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Snackbar> when {color} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "padding": 16,
                },
                Object {
                  "backgroundColor": "#62e6ac",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": undefined,
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                  },
                  undefined,
                  false,
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Snackbar> when {icon} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "padding": 16,
                },
                Object {
                  "backgroundColor": "#191919",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text />
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": undefined,
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                  },
                  undefined,
                  false,
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Snackbar> when {onClose} 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={
          Object {
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "padding": 16,
                },
                Object {
                  "backgroundColor": "#191919",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": undefined,
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                  },
                  undefined,
                  false,
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
            </Text>
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onLayout={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              pointerEvents="box-only"
              style={
                Array [
                  undefined,
                  Array [
                    Object {
                      "alignContent": "center",
                      "alignItems": "center",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                      "width": "auto",
                    },
                    undefined,
                    Object {
                      "backgroundColor": "#191919",
                      "borderRadius": undefined,
                    },
                    undefined,
                    Object {
                      "height": 32,
                      "paddingHorizontal": 8,
                    },
                    Object {
                      "alignSelf": "center",
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                  }
                }
              >
                <Text />
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "bottom": 0,
                      "left": 0,
                      "overflow": "hidden",
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                    },
                    undefined,
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "backgroundColor": "#ffffff",
                      "height": 0,
                      "opacity": 0,
                      "width": 0,
                      "zIndex": 0,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`<Snackbar> when {visible} (false) 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "height": "100%",
      "left": 0,
      "maxHeight": "100%",
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
          "justifyContent": "center",
        },
        Object {
          "justifyContent": "flex-end",
        },
        Object {
          "backgroundColor": "transparent",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "maxHeight": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        pointerEvents="auto"
        style={Object {}}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#ffffff",
                "padding": 24,
              },
              Array [
                Object {
                  "padding": 16,
                },
                Object {
                  "backgroundColor": "#191919",
                },
              ],
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "fontFamily": undefined,
                    "textAlignVertical": "center",
                  },
                  Object {
                    "fontSize": 12,
                  },
                  undefined,
                  false,
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "flex": 1,
                  },
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
